# CSS125L_machine_project

./: .gitignore  README.md  app.py  demo.ipynb  group1shakra_final.ipynb  main.py  pyproject.toml  requirements.txt
examples/: invalid_malformed_time.srt  invalid_missing_index.srt  invalid_no_text.srt  invalid_timestamp_order.srt  valid_basic.srt  valid_complex.srt  valid_formatting.srt  valid_multiline.srt
src/: __init__.py  ast.py  ast_nodes.py  executor.py  export.py  formatter.py  interpreter.py  lexer.py  parser.py  stats.py  translator.py
tests/: test_executor.py  test_export.py  test_formatter.py  test_integration.py  test_lexer.py  test_parser.py  test_stats.py  test_translator.py
