[project]
name = "css125l-machine-project"
version = "0.1.0"
description = "A working interpreter for SubRip Text (.srt) subtitle files that can parse, validate, and execute time-synchronized subtitle display commands"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deep-translator>=1.11.4",
    "tqdm>=4.67.1",
]
